#3 Small bugs Shop page card layout changed Toolpick hover on add to cart icon is broken on: Shop Page, Front page, Related Products, Upsells, Cross-Sells Cart is empty button styled

--- a/assets/sass/6_woocommerce/_cart-page.scss
+++ b/assets/sass/6_woocommerce/_cart-page.scss
@@ -108,3 +108,22 @@
   opacity: 0.75;
   border: none;
 }
+
+/* Cart is empty button */
+.woocommerce .return-to-shop {
+  .button.wc-backward {
+    @include no-box-shadow();
+    @include border-radius(5px);
+    color: #fff;
+    font-family: inherit;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 24px;
+    padding: 11px 5px;
+    border: none;
+  }
+  .button.wc-backward:hover {
+    @include no-box-shadow();
+    opacity: 0.75;
+  }
+}
