--- a/assets/sass/6_woocommerce/_shop-page.scss
+++ b/assets/sass/6_woocommerce/_shop-page.scss
@@ -19,30 +19,28 @@
   .content {
 
     @include font-smooth();
-    display: table;
     padding: 15px 5px 0;
 
     .card-title {
-      display: table-header-group;
-      color: #333333;
+      color: #9A9A9A;
       font-family: inherit;
       font-size: 19px;
       font-weight: 300;
       line-height: 26px;
       text-align: left;
       padding: 0;
-      margin: 0;
+      margin: 15px 0 5px;
     }
 
     .category {
-      color: #9A9A9A;
+      color: #333333;
       font-family: inherit;
       font-size: 15px;
       font-weight: 300;
       line-height: 22px;
       text-align: left;
       text-transform: none;
-      margin: 15px 0 0;
+      margin: 0;
 
       a {
         color: #9A9A9A;
@@ -50,7 +48,6 @@
     }
 
     .footer {
-      display: block;
       width: 100%;
       margin: 0;
 
@@ -61,21 +58,19 @@
         font-size: 14px;
         font-weight: 300;
         line-height: 24px;
+
+        h4 {
+          margin: 0;
+        }
       }
 
       .stats {
-        display: inline-block;
-        /* position here is based on relative on li.product */
-        position: absolute;
-        bottom: -9px;
-        right: 10px;
-        /* this z-index is for add-to-cart button */
-        z-index: 100;
+
+        a {
+          margin: 0 0 10px !important;
+        }
 
         .tooltip .tooltip-arrow:before {
-          border-top: 11px solid #FFFFFF;
-          border-left: 11px solid transparent;
-          border-right: 11px solid transparent;
           left: -8px;
           right: auto;
           top: -12px;
@@ -108,25 +103,31 @@
           text-align: center;
           text-decoration: none;
         }
-        .added_to_cart {
-          @include no-box-shadow();
-          @include border-radius(30px);
-          font-family: inherit;
-          font-size: 12px;
-          font-weight: 600;
-          line-height: 21px;
-          padding: 8px 18px;
-        }
-        .added_to_cart:hover {
-          @include no-box-shadow();
-          opacity: 0.75;
-        }
-        .added_to_cart:focus,
-        .added_to_cart:active {
+        /* Add to cart icon */
+        .add_to_cart_button:active,
+        .add_to_cart_button:focus {
           @include no-box-shadow();
         }
         .hestia-view-cart-wrapper {
-          bottom: -45px;
+          bottom: -40px;
+          /* View cart button */
+          .added_to_cart {
+            @include no-box-shadow();
+            @include border-radius(30px);
+            font-family: inherit;
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 21px;
+            padding: 8px 18px;
+          }
+          .added_to_cart:hover {
+            @include no-box-shadow();
+            opacity: 0.75;
+          }
+          .added_to_cart:focus,
+          .added_to_cart:active {
+            @include no-box-shadow();
+          }
         }
       }
     }
@@ -146,8 +147,6 @@
   .products {
 
     .product {
-      /* position here for cart icon on card-product */
-      position: relative;
 
       > .card > .card-image {
         @include no-box-shadow();
